<resources>
    <string name="app_name">Easy Contacts</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="enterdetails">Enter Contact Details</string>
    <string name="editdetails">Edit Contact Details</string>
</resources>
